Added ColorBall with functionality to GameSpace | Added Obstacle Collision Detection